--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = true
 scopes = {
-	"last_search.B655092D" = "st:"
+	"last_search.B655092D" = "st:cre"
 	"OpenInspectorPreview.B655092D" = "0"
 	"currentGroup.B655092D" = "all"
 }
