Added functionality to answer Guessed or not and then save them Change Icons folder location into Resources folder

--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = true
 scopes = {
-	"last_search.B655092D" = "st:discl"
+	"last_search.B655092D" = "st:gues"
 	"OpenInspectorPreview.B655092D" = "0"
 	"currentGroup.B655092D" = "all"
 }
