--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,9 +7,12 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = true
 scopes = {
-	"last_search.B655092D" = "st:gues"
+	"last_search.B655092D" = "st:Cred"
 	"OpenInspectorPreview.B655092D" = "0"
 	"currentGroup.B655092D" = "all"
+	"last_search.21382318" = ""
+	"OpenInspectorPreview.21382318" = "0"
+	"currentGroup.21382318" = "asset"
 }
 providers = {
 	at = {
